--- a/Mapas/MainPage.xaml
+++ b/Mapas/MainPage.xaml
@@ -2,11 +2,14 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:maps="clr-namespace:Microsoft.Maui.Controls.Maps;assembly=Microsoft.Maui.Controls.Maps"
              NavigationPage.HasNavigationBar="False"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             
-             x:Class="Mapas.MainPage">
-            <maps:Map x:Name="map" />
-            
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Mapas.MainPage">
+           
 
+    <Grid RowDefinitions="95*,5*">
+        <maps:Map x:Name="map" />
+        <StackLayout Grid.Row="1" HeightRequest="250" Margin="0,210,0,0"  Padding="20" BackgroundColor="#ff9806" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"></StackLayout>
+        <Button Grid.Row="1" Text="Historial de pedidos" TextColor="White" BackgroundColor="#ff9806" HorizontalOptions="Start"></Button>
+        <Button Grid.Row="1" Text="Pedidos pendientes " TextColor="White" BackgroundColor="#ff9806"  HorizontalOptions="End"></Button>
+    </Grid>
 
 </ContentPage>
